--- a/styles/style.css
+++ b/styles/style.css
@@ -80,17 +80,18 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  margin-right: 1rem;
   padding: 2vmin 0rem;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 45rem;
           flex: 1 1 45rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .navbar nav .links-n-shit ul {
@@ -133,7 +134,6 @@ a {
   -webkit-box-pack: none;
       -ms-flex-pack: none;
           justify-content: none;
-  width: 7vmin;
   padding-left: 1rem;
 }
 
